meecast (0.7.1) unstable; urgency=low

  * Nothing 
  * BB Fixed problem with showing current temperature

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 09 Mar 2013 16:31:23 +0200

meecast (0.7) unstable; urgency=low

  * BB Fixed problem with background in main and hours form
  * BB Changed position of button menu in main form 
  * BB Increased font for weather description and day name
  * BB Redesigned tabs in Main and Fullweather forms
  * BB Redesigned Main and Fullweather forms
  * BB Fixed problem with Main page after removing all stations
  * BB Fixed background colour in settings menus
  * Disabled debug for gismeteo.ru and foreca.com sources
  * Fixed problem with big size of icon in lockscreen applet
  * Fixed problem with Settings pages - Lockscreen and StandbyScreen
  * Added icons for gismeteo.ru 
  * Updated Catalan, Finish, Norway, Arabic, Russian translations

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 09 Mar 2013 16:31:23 +0200

meecast (0.6.10) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Added icons for foreca.com
  * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch, Slovak translations
  * Added new iconset Atmos. Thanks Andrew Zhilin
  * Fixed problem with feels like in source gismeteo.ru
  * Fixed problem with timezone in source gismeto.ru
  * Fixed problem with updating weather forecast data for new station 
  * Added description string to gismeteo.ru 
  * Fixed problem with first updating weather forecast in source yr.no
  * Changed icon 'fog' for LockScreen. Thanks Red Verge
  * Fixed menu bar position and behaviour. Thanks Nakram.

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 20 Jan 2013 19:31:23 +0200

meecast (0.6.9) unstable; urgency=low

  * Fixed icon ICY in Epona set 
  * Fixed problem with current weather in gismeteo.ru source
  * Added icon and description string to gismeteo.ru 
  * Fixed problem with weather forecast in gismeteo.ru for Australia
  * Changed splash. Thanks Andrew Zhilin (wazd)
  * Added icon for hko.gov.hk